<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="title">Playlist maker</string>
    <string name="search">Поиск</string>
    <string name="media">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="settings_caption">Настройки</string>
    <string name="dark_theme">Темная тема</string>
    <string name="share_application">Поделиться приложением</string>
    <string name="write_support">Написать в поддержку</string>
    <string name="user_document">Пользовательское соглашение</string>
    <string name="share_message">Playlist Maker</string>
    <string name="link_course" translatable="false">https://practicum.yandex.ru/profile/android-developer/</string>
    <string name="link_agreement">https://yandex.ru/legal/practicum_offer/</string>
    <string name="email">desa-07@mail.ru</string>
    <string name="email_title">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="email_message">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="search_hint">Поиск</string>
    <string name="image_description">Clear</string>
    <string name="image_track_row">Track image</string>
    <string name="image_track_arrow_right">Play</string>
    <string name="search_error_tracks_not_found">Ничего не нашлось</string>
    <string name="search_error_internet_not_found">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="search_button_reconnect">Обновить</string>
    <string name="activitysearch_you_search">Вы искали</string>
    <string name="activitysearch_search_text">Поиск</string>
    <string name="activitysearch_clear_history">Очистить историю</string>

    <string name="album_cover_image">Изображение обложки альбома</string>
    <string name="track_details">Информация о треке</string>
    <string name="add_to_playlist">Добавить в плейлист</string>
    <string name="add_to_favorites">Добавить в избранное</string>
    <string name="duration">Длительность</string>
    <string name="album">Альбом</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>
    <string name="play">Воспроизвести</string>
</resources>