<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:textSize="@dimen/caption_text_size"
        android:text="@string/title"
        android:textColor="@color/caption"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="12dp"
    />

    <Button
        android:id="@+id/btn_search"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/button_margin_offset"
        android:layout_marginTop="@dimen/button_top_offset"
        android:layout_marginEnd="@dimen/button_margin_offset"
        android:layout_weight="1"
        android:backgroundTint="@color/white"
        android:text="@string/search"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="@dimen/button_text_size"
        app:cornerRadius="@dimen/button_corner_radius"
        app:icon="@drawable/ic_search_button"
        app:iconGravity="textStart"
        app:iconPadding="@dimen/ico_padding"
        app:iconSize="@dimen/ico_size"
        app:iconTint="@color/black" />

    <Button
        android:id="@+id/btn_media"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/button_margin_offset"
        android:layout_marginTop="@dimen/button_margin_offset"
        android:layout_marginEnd="@dimen/button_margin_offset"
        android:layout_weight="1"
        android:backgroundTint="@color/white"
        android:text="@string/media"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="@dimen/button_text_size"
        app:cornerRadius="@dimen/button_corner_radius"
        app:icon="@drawable/ic_media_button"
        app:iconGravity="textStart"
        app:iconPadding="@dimen/ico_padding"
        app:iconSize="@dimen/ico_size"
        app:iconTint="@color/black" />

    <Button
        android:id="@+id/btn_settings"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/button_margin_offset"
        android:layout_marginTop="@dimen/button_margin_offset"
        android:layout_marginEnd="@dimen/button_margin_offset"
        android:layout_marginBottom="@dimen/button_bottom_offset"
        android:layout_weight="1"
        android:backgroundTint="@color/white"
        android:text="@string/settings"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="@dimen/button_text_size"
        app:cornerRadius="@dimen/button_corner_radius"
        app:icon="@drawable/ic_settings_button"
        app:iconGravity="textStart"
        app:iconPadding="@dimen/ico_padding"
        app:iconSize="@dimen/ico_size"
        app:iconTint="@color/black" />
</LinearLayout>